Fix footer contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ div.desc {
 }
 
 .footer-bgc {
-  background-color:rgba(255, 0, 0, 0.925);
+  background-color:rgba(212, 211, 211, 0.925);
 }
 
 .collapse {
